Sealing PrimitiveProvenance and making a bunch of things into records.