@@ -31,37 +31,36 @@ package com.oracle.labs.mlrg.olcut.provenance.io;
 import com.oracle.labs.mlrg.olcut.util.Pair;
 
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.Iterator;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.Objects;
 
 /**
  * A marshalled provenance which contains a map of other {@link FlatMarshalledProvenance} objects.
  * This can recursively include other lists or maps.
  */
-public final class MapMarshalledProvenance implements FlatMarshalledProvenance, Iterable<Pair<String,FlatMarshalledProvenance>> {
-
-    private final Map<String, FlatMarshalledProvenance> map;
+public record MapMarshalledProvenance(Map<String, FlatMarshalledProvenance> map)
+        implements FlatMarshalledProvenance, Iterable<Pair<String, FlatMarshalledProvenance>> {
 
     /**
      * Constructs a MapMarshalledProvenance wrapped around the supplied map.
+     *
      * @param map The map.
      */
     public MapMarshalledProvenance(Map<String, FlatMarshalledProvenance> map) {
-        this.map = Collections.unmodifiableMap(new HashMap<>(map));
+        this.map = Map.copyOf(map);
     }
 
     /**
      * Constructs an empty MapMarshalledProvenance.
      */
     public MapMarshalledProvenance() {
-        this.map = Collections.emptyMap();
+        this(Collections.emptyMap());
     }
 
     /**
      * Is this MapMarshalledProvenance empty?
+     *
      * @return True if the provenance contains no other provenances.
      */
     public boolean isEmpty() {
@@ -78,26 +77,8 @@ public final class MapMarshalledProvenance implements FlatMarshalledProvenance, 
         return "MapMarshalledProvenance" + map.toString();
     }
 
-    @Override
-    public boolean equals(Object o) {
-        if (this == o) return true;
-        if (!(o instanceof MapMarshalledProvenance that)) return false;
-        return map.equals(that.map);
-    }
-
-    @Override
-    public int hashCode() {
-        return Objects.hash(map);
-    }
-
-    private static class MapMarshalledProvenanceIterator implements Iterator<Pair<String, FlatMarshalledProvenance>> {
-
-        private final Iterator<Entry<String, FlatMarshalledProvenance>> itr;
-
-        public MapMarshalledProvenanceIterator(Iterator<Map.Entry<String, FlatMarshalledProvenance>> itr) {
-            this.itr = itr;
-        }
-
+    private record MapMarshalledProvenanceIterator(Iterator<Entry<String, FlatMarshalledProvenance>> itr)
+            implements Iterator<Pair<String, FlatMarshalledProvenance>> {
         @Override
         public boolean hasNext() {
             return itr.hasNext();
@@ -105,8 +86,8 @@ public final class MapMarshalledProvenance implements FlatMarshalledProvenance, 
 
         @Override
         public Pair<String, FlatMarshalledProvenance> next() {
-            Map.Entry<String, FlatMarshalledProvenance> item = itr.next();
-            return new Pair<>(item.getKey(),item.getValue());
+            Entry<String, FlatMarshalledProvenance> item = itr.next();
+            return new Pair<>(item.getKey(), item.getValue());
         }
     }
 
